second commit work on both my auth and google auth

--- a/templates/google_login/login.html
+++ b/templates/google_login/login.html
@@ -1,20 +1,59 @@
+{% extends 'base.html' %}
 {% load socialaccount %}
-<html>
+{% block content %}
 
-<head>
-    <title>Google Registration</title>
-</head>
+    <style>
+	.form-signin {
+  max-width: 330px;
+  padding: 1rem;
+}
 
-<body>
-    <h1>My Google Login Project</h1>
-    {% if user.is_authenticated %}
-    <p>Welcome, {{ user.username }} !</p>
+.form-signin .form-floating:focus-within {
+  z-index: 2;
+}
 
-    {% else %}
-    <h1>My Google Login Project</h1>
-    <a href="{% provider_login_url 'google' %}">Login with Google</a>
-    {% endif %}
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
 
-</body>
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+</style>
 
-</html>
+
+<main class="form-signin w-100 m-auto">
+  <form method="post">{% csrf_token %}
+    <h1 class="h3 mb-3 fw-normal">Login</h1>
+
+    <div class="form-floating">
+      <input type="email" name="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+      <label for="floatingInput">Email address</label>
+    </div><br>
+    <div class="form-floating">
+      <input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Password">
+      <label for="floatingPassword">Password</label>
+    </div>
+   			 {% for field in login_form %}
+				<p>
+					{% for error in field.errors %}
+						<p style="color: red;">{{error}}</p>
+					{% endfor %}
+
+				</p>
+			{% endfor %}
+			{% if login_form.non_field_errors %}
+				<p style="color:red">{{login_form.non_field_errors}}</p>
+			{% endif %}
+    <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
+  </form><br>
+  <p>Don't have an account? <a href="{% url 'register' %}">Register Here</a></p>
+<p class="text-center">OR</p>
+<a class="btn btn-info w-100 py-2" href="{% provider_login_url 'google' %}">Login with Google</a>
+</main>
+{% endblock %}
+
