--- a/templates/index.html
+++ b/templates/index.html
@@ -23,8 +23,8 @@
                 </div>
                 <div>
                     <p><a class="btn btn-outline-danger" href="shop/delete/{{ product.id }}">Delete</a></p>
-                    <p><a class="btn btn-outline-info" href="#">Update</a></p>
-                    <p><a class="btn btn-outline-success" href="shop/pay/{{ product.id }}">Pay</a></p>
+                    <p><a class="btn btn-outline-info" href="shop/update/{{ product.id }}">Update</a></p>
+                    <p><a class="btn btn-outline-success" href="shop/pay/{{ product.id }}">Mpesa</a></p>
                 </div>
             </div>
         {% endfor %}
