--- a/templates/account/social/signup.html
+++ b/templates/account/social/signup.html
@@ -28,16 +28,8 @@
 
 <main class="form-signin w-100 m-auto">
   <form method="post" autocomplete="off">{% csrf_token %}
-    <h1 class="h3 mb-3 fw-normal">Register</h1>
-
-    <div class="form-floating">
-      <input type="text" name="first_name" class="form-control" id="floatingFirstName">
-      <label for="floatingFirstName">First Name</label>
-    </div><br>
-    <div class="form-floating">
-      <input type="text" name="last_name" class="form-control" id="floatingLastName">
-      <label for="floatingLastName">Last Name</label>
-    </div><br>
+    <h1 class="h3 mb-3 fw-normal">Sign Up</h1>
+    <h4>You are about to use your Social account to login to localhost. As a final step, please complete the following form</h4>
     <div class="form-floating">
       <input type="text" name="username" class="form-control" id="floatingUserName" autocomplete="off">
       <label for="floatingUserName">Username</label>
@@ -46,14 +38,6 @@
       <input type="email" name="email" class="form-control" id="floatingEmail">
       <label for="floatingEmail">Email address</label>
     </div><br>
-    <div class="form-floating">
-      <input type="password" name="password1" class="form-control" id="floatingPassword" autocomplete="off">
-      <label for="floatingPassword">Password</label>
-    </div><br>
-    <div class="form-floating">
-      <input type="password" name="password2" class="form-control" id="floatingPassword">
-      <label for="floatingPassword">Password Again</label>
-    </div>
    			 {% for field in registration_form %}
 				<p>
 					{% for error in field.errors %}
@@ -65,10 +49,8 @@
 			{% if registration_form.non_field_errors %}
 				<p style="color:red">{{registration_form.non_field_errors}}</p>
 			{% endif %}
-    <button class="btn btn-primary w-100 py-2" type="submit">Register</button>
+    <button class="btn btn-primary w-100 py-2" type="submit">Sign Up</button>
   </form><br>
-  <p>Have an account? <a href="{% url 'login' %}">Login Here</a></p>
-<p class="text-center">OR</p>
 
 
 </main>
