--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -1,44 +1,46 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 <style>
-	.form-control-dark {
-  border-color: var(--bs-gray);
-}
-.form-control-dark:focus {
-  border-color: #fff;
-  box-shadow: 0 0 0 .25rem rgba(255, 255, 255, .25);
-}
+    .form-control-dark {
+        border-color: var(--bs-gray);
+    }
+    .form-control-dark:focus {
+        border-color: #fff;
+        box-shadow: 0 0 0 .25rem rgba(255, 255, 255, .25);
+    }
 
-.text-small {
-  font-size: 85%;
-}
+    .text-small {
+        font-size: 85%;
+    }
 
-.dropdown-toggle:not(:focus) {
-  outline: 0;
-}
+    .dropdown-toggle:not(:focus) {
+        outline: 0;
+    }
 
 </style>
 
 <div class="container">
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
-        <span class="fs-4">
+        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+            <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
+            <span class="fs-4">
         	{% if request.user.is_authenticated %}
-				Hello, {{request.user.username}}
-			{% endif %}
-        </span>
-      </a>
+                Hello, {{request.user.username}}
+                <p><a class="btn btn-outline-primary" href="{% url 'shop' %}">Create</a></p>
 
-      <ul class="nav nav-pills">
-      	{% if request.user.is_authenticated %}
-        <li class="nav-item"><a href="{% url 'home' %}" class="nav-link text-dark" aria-current="page">Home</a></li>
-        <li class="nav-item"><a href="{% url 'profile' %}" class="nav-link text-dark">Profile</a></li>
-        <li class="nav-item"><a href="{% url 'logout' %}" class="nav-link text-dark">Logout</a></li>
-        {% else %}
-        <li class="nav-item"><a href="{% url 'home' %}" class="nav-link text-dark">Home</a></li>
-        <li class="nav-item"><a href="{% url 'register' %}" class="nav-link text-dark">Register</a></li>
-        <li class="nav-item"><a href="{% url 'login' %}" class="nav-link text-dark">Login</a></li>
-        {% endif %}
-      </ul>
+            {% endif %}
+        </span>
+        </a>
+
+        <ul class="nav nav-pills">
+            {% if request.user.is_authenticated %}
+                <li class="nav-item"><a href="{% url 'home' %}" class="nav-link text-dark" aria-current="page">Home</a></li>
+                <li class="nav-item"><a href="{% url 'profile' %}" class="nav-link text-dark">Profile</a></li>
+                <li class="nav-item"><a href="{% url 'logout' %}" class="nav-link text-dark">Logout</a></li>
+            {% else %}
+                <li class="nav-item"><a href="{% url 'home' %}" class="nav-link text-dark">Home</a></li>
+                <li class="nav-item"><a href="{% url 'register' %}" class="nav-link text-dark">Register</a></li>
+                <li class="nav-item"><a href="{% url 'login' %}" class="nav-link text-dark">Login</a></li>
+            {% endif %}
+        </ul>
     </header>
-  </div>
+</div>
